@@ -28,6 +28,16 @@
       en: "Edit local preferences"
     }
 
+    var CONFIGURE_LOCAL_STYLESHEET_NAME = 
+	{
+	  en: "Local Stylesheet..."
+	}
+
+	var CONFIGURE_LOCAL_STYLESHEET_DESCRIPTION = 
+	{
+	  en: "Edit local stylesheet"
+	}
+
     var CONFIGURE_SYSTEM_ALIASES_NAME = 
     {
       en: "System Aliases..."
@@ -68,7 +78,18 @@
       en: "Installed Addons"
     };
 
+    function editCSSFile(strFilename)
+	{
+		var myEditor = (typeof cssEditorExe != "undefined") ? cssEditorExe : "notepad";
+		var install_dir = ".";
+		if (ensureLauncher())
+		{
+			install_dir = DQSDLauncher.InstallationDirectory;
+		}
+		var cmd = "\""+myEditor+"\" \""+install_dir+"\\"+strFilename + "\"";
+		openDocument(cmd);
 
+	}
 
 	function editConfigFile(strFilename)
 	{
@@ -86,6 +107,7 @@
 	{
 		mb.AppendMenuItem( local(CONFIGURE_LOCAL_ALIASES_NAME), "editConfigFile(\"localaliases.txt\")", local(CONFIGURE_LOCAL_ALIASES_DESCRIPTION), hmenu);
 		mb.AppendMenuItem( local(CONFIGURE_LOCAL_PREFERENCES_NAME), "editConfigFile(\"localprefs.js\")", local(CONFIGURE_LOCAL_PREFERENCES_DESCRIPTION), hmenu);
+		mb.AppendMenuItem( local(CONFIGURE_LOCAL_STYLESHEET_NAME), "editCSSFile(\"localsearch.css\")", local(CONFIGURE_LOCAL_STYLESHEET_DESCRIPTION), hmenu);
 		mb.AppendSeparator(hmenu);
 		mb.AppendMenuItem( local(CONFIGURE_SYSTEM_ALIASES_NAME), "editConfigFile(\"aliases.txt\")", local(CONFIGURE_SYSTEM_ALIASES_DESCRIPTION), hmenu);
 		mb.AppendMenuItem( local(CONFIGURE_SYSTEM_PREFERENCES_NAME), "editConfigFile(\"preferences.js\")", local(CONFIGURE_SYSTEM_PREFERENCES_DESCRIPTION), hmenu);	
